<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="order_summary_chocolate">Add chocolate?
        <xliff:g id="addChocolate" example="true">%b</xliff:g>
    </string>
    <string name="order_summary_email_subject">Just java for
        <xliff:g id="name" example="Amy">%s</xliff:g>
    </string>
    <string name="order_summary_name">Name:
        <xliff:g id="name" example="Amy">%s</xliff:g>
    </string>
    <string name="order_summary_price">Total:
        <xliff:g id="price" example="$10">%s</xliff:g>
    </string>
    <string name="order_summary_quantity">Quantity:
        <xliff:g id="quantity" example="2">%d</xliff:g>
    </string>
    <string name="order_summary_whipped_cream">Add whipped cream?
        <xliff:g id="addWhippedCream" example="true">%b</xliff:g>
    </string>
    <string name="quantity">Quantity</string>
    <string name="thank_you">Thank you!</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="total">Total:</string>
</resources>
