<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.justjava.MainActivity"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

        <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords"
                />
        <TextView
                android:text="@string/toppings"
                style="@style/HeaderTextStyle"
                />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

            <CheckBox
                    android:id="@+id/whipped_cream_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whipped_cream"
                    android:textSize="16sp"
                    android:layout_marginLeft="24dp"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                >

            <CheckBox
                    android:id="@+id/chocolate_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chocolate"
                    android:textSize="16sp"
                    android:layout_marginLeft="24dp"
            />
        </LinearLayout>

        <TextView
                android:text="@string/quantity"
                style="@style/HeaderTextStyle"
                android:paddingBottom="16dp"
        />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="-"
                    android:onClick="decrement"
            />

            <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
            />

            <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="+"
                    android:onClick="increment"
            />

        </LinearLayout>

        <TextView
                android:text="@string/total"
                style="@style/HeaderTextStyle"
                android:paddingTop="16dp"
        />

        <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000"
                android:textSize="16sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textAllCaps="true"
                android:onClick="submitOrder"
        />
    </LinearLayout>
</ScrollView>
